<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CoinsFrame</class>
 <widget class="QFrame" name="CoinsFrame">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>675</width>
    <height>486</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Frame</string>
  </property>
  <property name="frameShape">
   <enum>QFrame::StyledPanel</enum>
  </property>
  <property name="frameShadow">
   <enum>QFrame::Raised</enum>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QComboBox" name="m_typeSelect"/>
     </item>
     <item>
      <widget class="QLineEdit" name="m_searchFor">
       <property name="placeholderText">
        <string>Search...</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="m_clearAllButton">
       <property name="icon">
        <iconset resource="../../resources.qrc">
         <normaloff>:/icons/remove</normaloff>:/icons/remove</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTreeView" name="m_outputsView">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>280</height>
      </size>
     </property>
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustIgnored</enum>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::CurrentChanged|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
     <property name="rootIsDecorated">
      <bool>false</bool>
     </property>
     <property name="uniformRowHeights">
      <bool>true</bool>
     </property>
     <property name="itemsExpandable">
      <bool>false</bool>
     </property>
     <property name="sortingEnabled">
      <bool>false</bool>
     </property>
     <attribute name="headerCascadingSectionResizes">
      <bool>true</bool>
     </attribute>
     <attribute name="headerShowSortIndicator" stdset="0">
      <bool>false</bool>
     </attribute>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="../../resources.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>m_outputsView</sender>
   <signal>doubleClicked(QModelIndex)</signal>
   <receiver>CoinsFrame</receiver>
   <slot>messageDoubleClicked(QModelIndex)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>337</x>
     <y>158</y>
    </hint>
    <hint type="destinationlabel">
     <x>337</x>
     <y>179</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>m_clearAllButton</sender>
   <signal>clicked()</signal>
   <receiver>CoinsFrame</receiver>
   <slot>resetFilterClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>652</x>
     <y>21</y>
    </hint>
    <hint type="destinationlabel">
     <x>337</x>
     <y>242</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>messageDoubleClicked(QModelIndex)</slot>
  <slot>replyClicked()</slot>
  <slot>pasteClicked()</slot>
  <slot>sendClicked()</slot>
  <slot>addressEdited(QString)</slot>
  <slot>messageTextChanged()</slot>
  <slot>ttlValueChanged(int)</slot>
  <slot>addressBookClicked()</slot>
  <slot>resetFilterClicked()</slot>
 </slots>
</ui>
